--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="university">江苏师范大学科文学院</div>
             <div class="profession">本科 | 电子信息工程</div>
             <div class="time">2015~2019</div>
-            <div class="lesson">主修课程：C++、嵌入式系统、单片机原理及应用、计算机控制技术等</div>
+            <div class="lesson" style="margin-top: 10px">主修课程：C++、嵌入式系统、单片机原理及应用、计算机控制技术等</div>
             <div class="box-one">
                 <img src="./img/校徽.jpg" alt="校徽">
             </div>
