--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="Introduction">
             <h1>自我描述</h1>
-            <div class="box-two"> 本人有3个月的前端实习经验，掌握HTML5、CSS前端切图知识，并能灵活运用；了解JavaScript基本语法，并在积极持续学习中。对前端有着浓厚的学习兴趣，并且也相信自己可以做好前端工程师这个岗位，责任心强，耐力持久，热爱技术，符合程序员的内敛、灵活、钻研等特性。</div>
+            <div class="box-two"> 本人有3个月的前端实习经验，掌握HTML5、CSS前端切图知识，并能灵活运用；了解JavaScript基本语法，能够处理基本事件，并在积极持续学习中。对前端有着浓厚的学习兴趣，热爱web前端编程，并且也相信自己可以胜任前端工程师这个岗位，工作细致，责任心强，耐力持久，忠于技术，热爱技术，有良好的团队合作精神和沟通组织能力，希望不断地突破自我。</div>
         </div>
         <div class="gratuate-experience">
             <h1>教育经历</h1>
